Fix code to use Accumulo-3.0.0